--- a/index.html
+++ b/index.html
@@ -11,6 +11,9 @@
     <meta name="author" content="Emirhan Aslan">
     <meta name="description" content="Passionate about writing software that solves problems in a creative way.">
 
+    <!--GoogleSearchConsole-->
+    <meta name="google-site-verification" content="P4MrTrOpLd5LJ3P6AOu2luy0fBjpAtpBsTwO6ygxuLk" />
+
     <!--Core Theme CSS (Includes Bootstrap)-->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
@@ -29,6 +32,7 @@
     
 
     <title>EMIRHAN ASLAN</title>
+    <link rel="shortcut icon" href="/images/titleLogo.png">
 </head>
 
 <body id="page-top">
@@ -38,9 +42,9 @@
 
     <nav class="navbar navbar-expand-lg  fixed-top" style="background-color: black;" id="sideNav">
 
-        <a class="navbar-brand" href="#page-top">
+        <a class="navbar-brand" href="#EmirhanASLAN">
             <span class="d-none d-lg-block" style="margin-bottom: 156px;">
-                <img class="img-fluid img-profile rounded-circle l mx-auto  mt-5 mb-2" src="images/myprofilephoto2.jpg"
+                <img class="img-fluid img-profile rounded-circle l mx-auto  mt-5 mb-2" src="images/Black and White EA Logo.png"
                     alt="profile-avatar" style="height: 160px; width: 160px;">
             </span>
         </a>
@@ -73,7 +77,7 @@
                     </a>
 
                     <a class="social-icon mb-2" target="_blank"
-                        href="https://www.linkedin.com/in/emirhan-aslan-0239261b4/">
+                        href="https://www.linkedin.com/in/aslanemirhan/">
                         <i class="bi bi-linkedin" style="color:black"></i>
                     </a>
 
