Google Search Console
Google Search Console

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     
 
     <title>EMIRHAN ASLAN</title>
-    <link rel="shortcut icon" href="/images/titleLogo.png">
+    <link rel="icon" href="/images/titleLogo.png">
 </head>
 
 <body id="page-top">
@@ -42,7 +42,7 @@
 
     <nav class="navbar navbar-expand-lg  fixed-top" style="background-color: black;" id="sideNav">
 
-        <a class="navbar-brand" href="#EmirhanASLAN">
+        <a class="navbar-brand">
             <span class="d-none d-lg-block" style="margin-bottom: 156px;">
                 <img class="img-fluid img-profile rounded-circle l mx-auto  mt-5 mb-2" src="images/Black and White EA Logo.png"
                     alt="profile-avatar" style="height: 160px; width: 160px;">
