--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     
 
     <title>EMIRHAN ASLAN</title>
-    <link rel="icon" href="/images/titleLogo.png">
+    <link rel="icon" href="images/titleLogo.png">
 </head>
 
 <body id="page-top">
