--- a/index.html
+++ b/index.html
@@ -1,10 +1,7 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
 
 <head>
-    <title>EMİRHAN ASLAN</title>
-    <link rel="icon" href="/images/titleLogo.png">
-
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -13,10 +10,6 @@
     <meta name="title" content="Personal Website - Emirhan Aslan">
     <meta name="author" content="Emirhan Aslan">
     <meta name="description" content="Passionate about writing software that solves problems in a creative way.">
-    
-    <!-- Required meta tags -->
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
     <!--GoogleSearchConsole-->
     <meta name="google-site-verification" content="P4MrTrOpLd5LJ3P6AOu2luy0fBjpAtpBsTwO6ygxuLk" />
@@ -36,28 +29,28 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Saira+Extra+Condensed:wght@900&display=swap" rel="stylesheet">
+    
 
-
-    <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
-        integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-
-    <!--CSS File-->
-    <link rel="stylesheet" href="/css/style.css">
+    <title>EMIRHAN ASLAN</title>
+    <link rel="icon" href="images/titleLogo.png">
 </head>
 
-<body>
+<body id="page-top">
 
-    <!--ANASAYFA-->
 
-    <nav class="bg-dark">
-        <ul>
-            <li class="logo"><img src="/images/Black and White EA Logo.png" alt="myLogo"></li>
-        </ul>
+    <!--Navigation-->
+
+    <nav class="navbar navbar-expand-lg  fixed-top" style="background-color: black;" id="sideNav">
+
+        <a class="navbar-brand">
+            <span class="d-none d-lg-block" style="margin-bottom: 156px;">
+                <img class="img-fluid img-profile rounded-circle l mx-auto  mt-5 mb-2" src="images/Black and White EA Logo.png"
+                    alt="profile-avatar" style="height: 160px; width: 160px;">
+            </span>
+        </a>
+
+        <div class="collapse navbar-collapse" id="navbarSupportedContent"></div>
     </nav>
-
-
-
 
     <!--Page Content-->
     <div class="container-fluid p-0">
@@ -69,22 +62,22 @@
                     EMİRHAN <span style="opacity: .6;">ASLAN</span>
                 </h1>
 
-                <div class="subheading mb-3 mx-5" style="font-family: monospace; opacity: .9; ">
-                    Mechanical Engineer | Software Developer
+                <div class="subheading mb-3 mx-5" style="font-family: monospace; opacity: .9; " >
+                    Mechanical Engineer | Software Developer 
                     <span class="mx-2">-</span>
-                    CONTACT ME:
-                    <a href="mailto:emirhanaslan3437@gmail.com">emirhanaslan3437@gmail.com</a>
+                    CONTACT ME: 
+                    <a href="mailto:emirhanaslan3437@gmail.com" >emirhanaslan3437@gmail.com</a>
                 </div>
 
-                <p class="lead mb-5 mx-5" style="font-family: monospace, sans-serif; opacity: .6;">Passionate about
-                    writing software that solves problems in a creative way.</p>
+                <p class="lead mb-5 mx-5" style="font-family: monospace, sans-serif; opacity: .6;">Passionate about writing software that solves problems in a creative way.</p>
 
                 <div class="social-icons d-flex align-items-center flex-wrap mx-5" id="social-icons">
                     <a class="social-icon mb-2" target="_blank" href="https://github.com/aslanemirhan">
                         <i class="bi bi-github" style="color:black"></i>
                     </a>
 
-                    <a class="social-icon mb-2" target="_blank" href="https://www.linkedin.com/in/aslanemirhan/">
+                    <a class="social-icon mb-2" target="_blank"
+                        href="https://www.linkedin.com/in/aslanemirhan/">
                         <i class="bi bi-linkedin" style="color:black"></i>
                     </a>
 
@@ -104,8 +97,6 @@
             </div>
         </section>
     </div>
-
-
 
 </body>
 
